# Pokemon-Red-AI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/audit-vendor-hotkeys/: SKILL.md
.claude/skills/test-drive-interactive/: SKILL.md
.claude/skills/verify-scaffold/: SKILL.md
pokemon_red_ai/agent/: bc_dataset.py  bc_train.py  ppo_train.py
pokemon_red_ai/emulator/: pyboy_env.py  ram_map.py
pokemon_red_ai/env/: accumulator.py  demo_format.py  keyboard_action.py  metrics.py  observation.py  overworld_env.py  reward.py
saved_states/: v1_starter_chosen.state
scripts/: inspect_demo.py  inspect_state.py  record_demo.py  record_state.py  smoke_emulator.py  train_bc.py  train_ppo.py
tests/: conftest.py  test_accumulator.py  test_bc_dataset.py  test_bc_train.py  test_demo_format.py  test_keyboard_action.py  test_metrics.py  test_observation.py  test_overworld_env.py  test_ppo_train.py  test_pyboy_env.py  test_ram_map.py  test_reward.py
